# slog

./: .gitignore  API_GUIDE.md  CMakeLists.txt  GenerateMakefiles.bat  LICENSE.txt  README.md  slog_test.c
slog/: slog.c  slog.h
